# runtime

./: .gitignore  CODE-OF-CONDUCT.md  Directory.Build.props  README.md  Third Party Notices.md  global.json
.yamato/: build_and_test_linux_x64.yml  build_and_test_osx_arm64.yml  build_and_test_osx_x64.yml  build_embed_host.yml  build_linux_x64_debug.yml  build_linux_x64_release.yml  build_osx_x64arm64.yml  build_test_linux_x64.yml  build_test_osx_arm64.yml  build_test_osx_x64.yml  build_test_windows_x64.yml  build_test_windows_x86.yml  build_windows.yml  build_windows_x64.yml  build_windows_x86.yml  osx.yml  test_linux_x64_debug.yml  test_linux_x64_release.yml  test_windows_x64.yml  test_windows_x86.yml
.yamato/scripts/: build_classlibs.bat  build_windows_x64.cmd  build_windows_x86.cmd  test_linux_x64.sh  test_osx_arm64.sh  test_osx_x64.sh  test_windows_x64.cmd  test_windows_x86.cmd
eng/: Version.Details.xml  Versions.props
eng/testing/: tests.wasm.targets
src/coreclr/: clrdefinitions.cmake  clrfeatures.cmake
src/coreclr/gc/: gc.cpp
src/coreclr/inc/: CrstTypes.def  clrconfigvalues.h  crsttypes.h  profilepriv.h  profilepriv.inl
src/coreclr/vm/: CMakeLists.txt  ceeload.h  classlayoutinfo.cpp  eeconfig.cpp  eeconfig.h  eepolicy.cpp  eetoprofinterfaceimpl.cpp  eetoprofinterfaceimpl.h  excep.cpp  finalizerthread.cpp  frozenobjectheap.cpp  gcenv.ee.cpp  gcheaputilities.cpp  gcheaputilities.h  genanalysis.cpp  genanalysis.h  jitinterface.cpp  method.cpp  methodtable.h  object.h  peimage.cpp  peimage.h  peimage.inl  prestub.cpp  profilinghelper.cpp  proftoeeinterfaceimpl.cpp  proftoeeinterfaceimpl.h  threadstatics.cpp  (+2 more)
src/libraries/: sendtohelix-wasm.targets
src/tests/: issues.targets
unity/: README.md
unity/UnityEmbedHost.Generator/: CoreCLRHostGenerator.cs  CoreCLRHostNativeWrappersGenerator.cs  NativeUtils.cs
unity/UnityEmbedHost.Tests/: BaseEmbeddingApiTests.cs  CoreCLRHostTestingWrappers.cs  EmbeddingApiTests.cs  NativeEmbeddingApiTests.cs  Samples.cs
unity/coreclr-test/: test.cs
unity/embed_api_tests/: main.cpp
unity/unity-embed-host/: CoreCLRHost.cs  CoreCLRHostWrappers.cs  HostStruct.cs  MonoTypeNameFormat.cs
unity/unity-profiler/: CMakeLists.txt  CoreProfiler.cpp  CoreProfiler.h  CoreProfilerFactory.cpp  CoreProfilerFactory.h  unity-profiler.cpp  unity-profiler.def
unity/unity-profiler/Unity/: IProfilerApi.h
unity/unitygc/: unitygc.cpp
(+38 files in other folders)
